# FastMarket

./: .gitignore
backend-service/: pyproject.toml
backend-service/app/: main.py
backend-service/app/core/: auth_guard.py  database.py  security.py
backend-service/app/models/: order.py  product.py  ticket.py  user.py
backend-service/app/routers/: ai_support.py  auth_user.py  order.py  orderRoute.py  product.py
backend-service/app/services/: ai_agent.py  payment.py
frontend-service/: Readme.txt  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend-service/src/: App.tsx  main.tsx
frontend-service/src/components/: Header.tsx  ProtectedRoute.tsx  TicketCard.tsx  TicketForm.tsx  TicketQueue.tsx  button.tsx  input.tsx  mainLayout.tsx
frontend-service/src/config/: constants.ts
frontend-service/src/features/auth/: authService.ts  authSlice.ts
frontend-service/src/pages/: Ai_support.tsx  loginpage.tsx
frontend-service/src/store/: store.ts
frontend-service/src/types/: aitype.ts  auth.ts
frontend-service/src/utils/: api.ts
